# diagnostic

./: .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: DASHBOARD.md  index.md
docs/api/: index.md
docs/book-guide/: case-studies.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: deflated-sharpe-ratio.md
docs/methods/: cpcv.md  deflated-sharpe-ratio.md  hac-ic.md  index.md
docs/reference/: architecture.md  references.md
docs/user-guide/: backtest-tearsheets.md  cross-validation.md  cv-configuration.md  feature-diagnostics.md  feature-selection.md  statistical-tests.md  trade-analysis.md  validation-tiers.md  workflows.md
examples/: README_TRADE_DIAGNOSTICS.md  VALIDATION_REPORT.md  autocorrelation_example.py  backtest_integration_example.py  barrier_analysis_example.ipynb  caching_example.py  complete_end_to_end_example.py  dataframe_access_example.py  diagnostic_plots_example.py  distribution_example.py  engineer_integration_example.py  error_handling_example.py  feature_diagnostics_example.py  heavy_tail_example.py  ml_importance_analysis_demo.py  multi_signal_analysis_example.ipynb  purged_walk_forward_example.py  report_generation_example.py  result_schemas_demo.py  shap_v11_model_agnostic_example.ipynb  stationarity_comprehensive_example.py  stationarity_example.py  test_notebook_execution.py  trade_diagnostics_example.ipynb  trade_shap_dashboard_demo.py  visualization_gallery.py  volatility_example.py  walk_forward_example.py
examples/examples/: generate_example_pdf.py
examples/output/: comparison.html  report.html  report.json  report.md
scripts/: benchmark_report.py  generate_agent_docs.py  run_tests.sh
src/ml4t/diagnostic/: AGENTS.md  __init__.py  api.py
src/ml4t/diagnostic/artifacts/: __init__.py  lineage.py  resolver.py
src/ml4t/diagnostic/caching/: cache.py  smart_cache.py
src/ml4t/diagnostic/config/: AGENT.md  AGENTS.md  __init__.py  feature_config.py  report_config.py  trade_analysis_config.py  validated_cv_config.py
src/ml4t/diagnostic/core/: purging.py  sampling.py
src/ml4t/diagnostic/errors/: __init__.py
src/ml4t/diagnostic/evaluation/: AGENTS.md  __init__.py  autocorrelation.py  barrier_analysis.py  dashboard.py  diagnostic_plots.py  event_analysis.py  excursion.py  feature_diagnostics.py  feature_outcome.py  framework.py  metric_registry.py  report_generation.py  signal_selector.py  themes.py  trade_shap_diagnostics.py  validated_cv.py  visualization.py
src/ml4t/diagnostic/integration/: AGENT.md  AGENTS.md  __init__.py  backtest.py  backtest_analytics.py  backtest_contract.py  backtest_profile.py  data_contract.py  report_metadata.py
src/ml4t/diagnostic/logging/: __init__.py  logger.py
src/ml4t/diagnostic/metrics/: AGENTS.md  __init__.py  basic.py  (+13 more)
tests/: conftest.py  test_engineer_contract.py  test_errors.py  test_initial.py  test_logging.py  test_results_schemas.py
tests/contracts/: evaluation_api_surface.json  polars_compute_contract.json  public_api_contract.json
tests/fixtures/: ff5_daily.parquet
tests/metrics/: test_public_metrics_namespace.py  test_uncertainty.py
tests/test_benchmarks/: test_performance.py
tests/test_config/: test_imports.py  test_trade_analysis_config.py
tests/test_contract/: test_docs_import_contract.py  test_evaluation_api_surface.py  test_polars_compute_contract.py  test_public_api_contract.py  test_trade_shap_boundary_contract.py
tests/test_core/: test_numba_utils.py  test_purging_correctness.py  test_sampling_correctness.py
tests/test_evaluation/: conftest.py  test_autocorrelation.py  test_barrier_analysis_week4.py  test_beta_review_regressions.py  test_bootstrap_correctness.py  test_conditional_ic.py  test_domain_classifier.py  test_drift_summary.py  test_excursion.py  test_factor_analysis.py  test_factor_attribution.py  test_factor_data.py  test_factor_kalman.py  test_factor_maxattr_reference.py  test_factor_reference.py  test_factor_regressions.py  test_factor_regularized.py  test_factor_risk.py  test_factor_rolling.py  test_factor_static.py  test_factor_timing.py  test_factor_validation.py  test_feature_diagnostics.py  test_feature_outcome.py  test_fold_shap.py  test_framework.py  test_h_statistic.py  test_ic_hac_correctness.py  test_information_coefficient.py  test_interaction_summary.py  test_mda_importance.py  test_metrics.py  test_metrics_core.py  test_ml_importance_analysis.py  test_monotonicity_correctness.py  test_multi_signal_week3.py  test_portfolio_analysis.py  test_report_generation.py  test_risk_adjusted_correctness.py  test_shap_importance.py  (+13 more)
tests/test_integration/: test_backtest_profile.py  test_backtest_result.py  test_data_contract.py  test_engineer_integration.py  test_equity_real_data.py  test_financial_data_patterns.py  test_full_workflow.py  test_shap_models.py
tests/test_performance/: test_factor_benchmarks.py  test_hot_paths.py  test_splitter_refactor_benchmarks.py
tests/test_results/: test_signal_results.py
tests/test_selection/: test_integration.py  test_systematic.py
tests/test_signal/: test_bridge.py  test_correctness_vs_alphalens.py  test_ic.py  test_quantile.py  test_signal_api.py  test_signal_correctness.py  test_utils.py
tests/test_splitters/: test_calendar.py  test_calendar_first.py  test_combinatorial.py  test_config.py  test_fold_summary.py  test_integration.py  test_multi_asset_cpcv.py  test_multi_asset_purging.py  test_persistence.py  test_utils.py  test_walk_forward.py  test_walk_forward_correctness.py  test_walk_forward_held_out.py
tests/test_utils/: test_config_manager.py  test_dependencies.py
tests/test_visualization/: conftest.py  test_backtest.py  test_barrier_plots.py  test_core.py  test_cv_plots.py  test_factor_plots.py  test_factor_plots_data.py  test_feature_plots.py  test_portfolio_plots.py  test_report_generation.py  test_signal_dashboard_events.py
tests/validation/: test_cpcv_afml.py  test_mathematical_properties.py  test_pyfolio_comparison.py
(+145 files in other folders)
